--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Stesha McKindle | Web Creations</title>
+        <link type="stylesheet/css" 
     <body>
         <h1>My new portfolio</h1>
     </body>
