--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
         <title>Stesha McKindle | Web Creations</title>
         <link type="stylesheet/css" 
     <body>
-        <h1>My new portfolio</h1>
+        <header>
+            <div class='contact'>
+                <p>Stesha McKindle</p>
+                <p>email: steshamckindle@gmail.com</p>
+                <p>phone: 503-840-9044</p>
+                <p>social media icons - use feather</p>
+            </div>
+            <nav class='navigationLinks'>
+                <p>resume</p>
+                <p>projects</p>
+            </nav>
+            <div class='titleHero'>
+                <h1>Hero Image</h1>
+            </div>
+        </header>
+        <main>
+            <section class='aboutMe'>
+                <p>picture</p>
+                <article class='aboutMe'>
+                    <p>about Me</p>
+                </article>
+            </section>
+            <section class='skillSet'>
+                <p>This is what I can do!</p>
+            </section>
+            <section class='whatsImportant'>
+                <div class='qualityBox'>
+                    <p>picture</p>
+                    <p>words</p>
+                </div>
+                <div class='qualityBox'>
+                    <p>picture</p>
+                    <p>words</p>
+                </div>
+                <div class='qualityBox'>
+                    <p>picture</p>
+                    <p>words</p>
+                </div>
+                <div class='qualityBox'>
+                    <p>picture</p>
+                    <p>words</p>
+                </div>
+                <p>link to projects</p>
+            </section>
+        </main>
+        <footer>
+            <p>everything that's in the header except the hero image.</p>
+        </footer>
     </body>
 </html>
