add links to scss files to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Stesha McKindle | Web Creations</title>
-        <link type="stylesheet/css" 
+        <link type="stylesheet/css" href="styles/reset.scss">
+        <link type="stylesheet/css" href="styles/styles.scss">
     <body>
         <header>
             <div class='contact'>
