add styles to index.html mobile view

--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Stesha McKindle | Web Creations</title>
-        <link type="stylesheet/css" href="styles/reset.scss">
-        <link type="stylesheet/css" href="styles/styles.scss">
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    </head>
     <body>
         <header>
-            <div class='contact'>
-                <p>Stesha McKindle</p>
-                <p>email: steshamckindle@gmail.com</p>
-                <p>phone: 503-840-9044</p>
-                <p>social media icons - use feather</p>
-            </div>
-            <nav class='navigationLinks'>
-                <p>resume</p>
-                <p>projects</p>
-            </nav>
+            <section class="contactNavDiv">
+                <div class='contact'>
+                    <p>Stesha McKindle</p>
+                    <p>email: steshamckindle@gmail.com</p>
+                    <p>phone: 503-840-9044</p>
+                </div>
+                <nav class='navigationLinks'>
+                    <p>resume</p>
+                    <p>projects</p>
+                </nav>
+                <div class="socMedia">
+                    <p>social media icons - use feather</p>
+                </div>
+            </section>
             <div class='titleHero'>
                 <h1>Hero Image</h1>
             </div>
@@ -26,7 +33,7 @@
                 <p>picture</p>
                 <article class='aboutMe'>
                     <p>about Me</p>
-                </article>
+                </article>  
             </section>
             <section class='skillSet'>
                 <p>This is what I can do!</p>
