--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
     <html lang="en">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Stesha McKindle | Projects</title>
-        <link type="stylesheet/css" href="styles/reset.scss">
-        <link type="stylesheet/css" href="styles/styles.scss">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>Stesha McKindle | Projects</title>
+            <link type="stylesheet/css" href="styles/reset.scss">
+            <link type="stylesheet/css" href="styles/styles.scss">
+            <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+        </head>
         <body>
             <header>
                 <div class='contact'>
